--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongodb": "^3.5.9",
     "mongoose": "^5.9.21",
     "router": "^1.3.5"
   },
