--- a/server/package.json
+++ b/server/package.json
@@ -13,10 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongodb": "^3.5.9",
     "mongoose": "^5.9.21",
+    "multer": "^1.4.2",
     "router": "^1.3.5"
   },
   "devDependencies": {
